--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "C:\\Users\\raden\\envs\\pyproject\\Scripts\\python.exe"
+    "python.pythonPath": "C:\\Users\\raden\\envs\\pyproject\\Scripts\\python.exe",
+    "python.formatting.provider": "yapf"
 }
